@@ -1,318 +1,485 @@
 import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
+import java.util.List;
 
 public class nz {
-   public static final aex<dwt> a = oa.a("village/plains/town_centers");
-   private static final aex<dwt> b = oa.a("village/plains/terminators");
+   private static final aev<dyz> M = a("empty");
+   public static final aev<dyz> a = a("zombie_plains");
+   public static final aev<dyz> b = a("zombie_savanna");
+   public static final aev<dyz> c = a("zombie_snowy");
+   public static final aev<dyz> d = a("zombie_taiga");
+   public static final aev<dyz> e = a("zombie_desert");
+   public static final aev<dyz> f = a("mossify_10_percent");
+   public static final aev<dyz> g = a("mossify_20_percent");
+   public static final aev<dyz> h = a("mossify_70_percent");
+   public static final aev<dyz> i = a("street_plains");
+   public static final aev<dyz> j = a("street_savanna");
+   public static final aev<dyz> k = a("street_snowy_or_taiga");
+   public static final aev<dyz> l = a("farm_plains");
+   public static final aev<dyz> m = a("farm_savanna");
+   public static final aev<dyz> n = a("farm_snowy");
+   public static final aev<dyz> o = a("farm_taiga");
+   public static final aev<dyz> p = a("farm_desert");
+   public static final aev<dyz> q = a("outpost_rot");
+   public static final aev<dyz> r = a("bottom_rampart");
+   public static final aev<dyz> s = a("treasure_rooms");
+   public static final aev<dyz> t = a("housing");
+   public static final aev<dyz> u = a("side_wall_degradation");
+   public static final aev<dyz> v = a("stable_degradation");
+   public static final aev<dyz> w = a("bastion_generic_degradation");
+   public static final aev<dyz> x = a("rampart_degradation");
+   public static final aev<dyz> y = a("entrance_replacement");
+   public static final aev<dyz> z = a("bridge");
+   public static final aev<dyz> A = a("roof");
+   public static final aev<dyz> B = a("high_wall");
+   public static final aev<dyz> C = a("high_rampart");
+   public static final aev<dyz> D = a("fossil_rot");
+   public static final aev<dyz> E = a("fossil_coal");
+   public static final aev<dyz> F = a("fossil_diamonds");
+   public static final aev<dyz> G = a("ancient_city_start_degradation");
+   public static final aev<dyz> H = a("ancient_city_generic_degradation");
+   public static final aev<dyz> I = a("ancient_city_walls_degradation");
+   public static final aev<dyz> J = a("trail_ruins_houses_archaeology");
+   public static final aev<dyz> K = a("trail_ruins_roads_archaeology");
+   public static final aev<dyz> L = a("trail_ruins_tower_top_archaeology");
 
-   public static void a(nt<dwt> $$0) {
-      hh<duo> $$1 = $$0.a(je.ay);
-      hg<duo> $$2 = $$1.b(pl.f);
-      hg<duo> $$3 = $$1.b(pl.k);
-      hg<duo> $$4 = $$1.b(pl.a);
-      hh<dzb> $$5 = $$0.a(je.aA);
-      hg<dzb> $$6 = $$5.b(ob.f);
-      hg<dzb> $$7 = $$5.b(ob.g);
-      hg<dzb> $$8 = $$5.b(ob.h);
-      hg<dzb> $$9 = $$5.b(ob.a);
-      hg<dzb> $$10 = $$5.b(ob.i);
-      hg<dzb> $$11 = $$5.b(ob.l);
-      hh<dwt> $$12 = $$0.a(je.aC);
-      hg<dwt> $$13 = $$12.b(oa.a);
-      hg<dwt> $$14 = $$12.b(b);
-      $$0.a(
+   private static aev<dyz> a(String $$0) {
+      return aev.a(jc.aA, new aew($$0));
+   }
+
+   private static void a(nr<dyz> $$0, aev<dyz> $$1, List<dyy> $$2) {
+      $$0.a($$1, new dyz($$2));
+   }
+
+   public static void a(nr<dyz> $$0) {
+      hf<csv> $$1 = $$0.a(jc.e);
+      dyq $$2 = new dyq(new dys(csw.pr, 0.01F), dxz.b, csw.pC.n());
+      dyq $$3 = new dyq(new dys(csw.pC, 0.5F), dxz.b, csw.pr.n());
+      a($$0, M, ImmutableList.of());
+      a(
+         $$0,
          a,
-         new dwt(
-            $$13,
-            ImmutableList.of(
-               Pair.of(dwr.a("village/plains/town_centers/plains_fountain_01", $$7), 50),
-               Pair.of(dwr.a("village/plains/town_centers/plains_meeting_point_1", $$7), 50),
-               Pair.of(dwr.a("village/plains/town_centers/plains_meeting_point_2"), 50),
-               Pair.of(dwr.a("village/plains/town_centers/plains_meeting_point_3", $$8), 50),
-               Pair.of(dwr.a("village/plains/zombie/town_centers/plains_fountain_01", $$9), 1),
-               Pair.of(dwr.a("village/plains/zombie/town_centers/plains_meeting_point_1", $$9), 1),
-               Pair.of(dwr.a("village/plains/zombie/town_centers/plains_meeting_point_2", $$9), 1),
-               Pair.of(dwr.a("village/plains/zombie/town_centers/plains_meeting_point_3", $$9), 1)
-            ),
-            dwt.a.b
+         ImmutableList.of(
+            new dyu(
+               ImmutableList.of(
+                  new dyq(new dys(csw.m, 0.8F), dxz.b, csw.cn.n()),
+                  new dyq(new dzd(aps.p), dxz.b, csw.a.n()),
+                  new dyq(new dye(csw.cp), dxz.b, csw.a.n()),
+                  new dyq(new dye(csw.cq), dxz.b, csw.a.n()),
+                  new dyq(new dys(csw.m, 0.07F), dxz.b, csw.bs.n()),
+                  new dyq(new dys(csw.cn, 0.07F), dxz.b, csw.bs.n()),
+                  new dyq(new dys(csw.hj, 0.07F), dxz.b, csw.bs.n()),
+                  new dyq(new dys(csw.U, 0.05F), dxz.b, csw.bs.n()),
+                  new dyq(new dys(csw.n, 0.1F), dxz.b, csw.bs.n()),
+                  new dyq(new dys(csw.cu, 0.1F), dxz.b, csw.bs.n()),
+                  new dyq(new dys(csw.al, 0.02F), dxz.b, csw.bs.n()),
+                  new dyq(new dys(csw.eZ, 0.5F), dxz.b, csw.bs.n()),
+                  new dyq[]{
+                     new dyq(
+                        new dyg(csw.eZ.n().a(cwt.a, Boolean.valueOf(true)).a(cwt.c, Boolean.valueOf(true))),
+                        dxz.b,
+                        csw.hL.n().a(cwt.a, Boolean.valueOf(true)).a(cwt.c, Boolean.valueOf(true))
+                     ),
+                     new dyq(
+                        new dyg(csw.eZ.n().a(cwt.b, Boolean.valueOf(true)).a(cwt.d, Boolean.valueOf(true))),
+                        dxz.b,
+                        csw.hL.n().a(cwt.b, Boolean.valueOf(true)).a(cwt.d, Boolean.valueOf(true))
+                     ),
+                     new dyq(new dys(csw.cB, 0.3F), dxz.b, csw.gt.n()),
+                     new dyq(new dys(csw.cB, 0.2F), dxz.b, csw.gu.n()),
+                     new dyq(new dys(csw.cB, 0.1F), dxz.b, csw.kD.n())
+                  }
+               )
+            )
          )
       );
-      oa.a(
+      a(
          $$0,
-         "village/plains/streets",
-         new dwt(
-            $$14,
-            ImmutableList.of(
-               Pair.of(dwr.a("village/plains/streets/corner_01", $$10), 2),
-               Pair.of(dwr.a("village/plains/streets/corner_02", $$10), 2),
-               Pair.of(dwr.a("village/plains/streets/corner_03", $$10), 2),
-               Pair.of(dwr.a("village/plains/streets/straight_01", $$10), 4),
-               Pair.of(dwr.a("village/plains/streets/straight_02", $$10), 4),
-               Pair.of(dwr.a("village/plains/streets/straight_03", $$10), 7),
-               Pair.of(dwr.a("village/plains/streets/straight_04", $$10), 7),
-               Pair.of(dwr.a("village/plains/streets/straight_05", $$10), 3),
-               Pair.of(dwr.a("village/plains/streets/straight_06", $$10), 4),
-               Pair.of(dwr.a("village/plains/streets/crossroad_01", $$10), 2),
-               Pair.of(dwr.a("village/plains/streets/crossroad_02", $$10), 1),
-               Pair.of(dwr.a("village/plains/streets/crossroad_03", $$10), 2),
-               new Pair[]{
-                  Pair.of(dwr.a("village/plains/streets/crossroad_04", $$10), 2),
-                  Pair.of(dwr.a("village/plains/streets/crossroad_05", $$10), 2),
-                  Pair.of(dwr.a("village/plains/streets/crossroad_06", $$10), 2),
-                  Pair.of(dwr.a("village/plains/streets/turn_01", $$10), 3)
-               }
-            ),
-            dwt.a.a
-         )
-      );
-      oa.a(
-         $$0,
-         "village/plains/zombie/streets",
-         new dwt(
-            $$14,
-            ImmutableList.of(
-               Pair.of(dwr.a("village/plains/zombie/streets/corner_01", $$10), 2),
-               Pair.of(dwr.a("village/plains/zombie/streets/corner_02", $$10), 2),
-               Pair.of(dwr.a("village/plains/zombie/streets/corner_03", $$10), 2),
-               Pair.of(dwr.a("village/plains/zombie/streets/straight_01", $$10), 4),
-               Pair.of(dwr.a("village/plains/zombie/streets/straight_02", $$10), 4),
-               Pair.of(dwr.a("village/plains/zombie/streets/straight_03", $$10), 7),
-               Pair.of(dwr.a("village/plains/zombie/streets/straight_04", $$10), 7),
-               Pair.of(dwr.a("village/plains/zombie/streets/straight_05", $$10), 3),
-               Pair.of(dwr.a("village/plains/zombie/streets/straight_06", $$10), 4),
-               Pair.of(dwr.a("village/plains/zombie/streets/crossroad_01", $$10), 2),
-               Pair.of(dwr.a("village/plains/zombie/streets/crossroad_02", $$10), 1),
-               Pair.of(dwr.a("village/plains/zombie/streets/crossroad_03", $$10), 2),
-               new Pair[]{
-                  Pair.of(dwr.a("village/plains/zombie/streets/crossroad_04", $$10), 2),
-                  Pair.of(dwr.a("village/plains/zombie/streets/crossroad_05", $$10), 2),
-                  Pair.of(dwr.a("village/plains/zombie/streets/crossroad_06", $$10), 2),
-                  Pair.of(dwr.a("village/plains/zombie/streets/turn_01", $$10), 3)
-               }
-            ),
-            dwt.a.a
-         )
-      );
-      oa.a(
-         $$0,
-         "village/plains/houses",
-         new dwt(
-            $$14,
-            ImmutableList.of(
-               Pair.of(dwr.a("village/plains/houses/plains_small_house_1", $$6), 2),
-               Pair.of(dwr.a("village/plains/houses/plains_small_house_2", $$6), 2),
-               Pair.of(dwr.a("village/plains/houses/plains_small_house_3", $$6), 2),
-               Pair.of(dwr.a("village/plains/houses/plains_small_house_4", $$6), 2),
-               Pair.of(dwr.a("village/plains/houses/plains_small_house_5", $$6), 2),
-               Pair.of(dwr.a("village/plains/houses/plains_small_house_6", $$6), 1),
-               Pair.of(dwr.a("village/plains/houses/plains_small_house_7", $$6), 2),
-               Pair.of(dwr.a("village/plains/houses/plains_small_house_8", $$6), 3),
-               Pair.of(dwr.a("village/plains/houses/plains_medium_house_1", $$6), 2),
-               Pair.of(dwr.a("village/plains/houses/plains_medium_house_2", $$6), 2),
-               Pair.of(dwr.a("village/plains/houses/plains_big_house_1", $$6), 2),
-               Pair.of(dwr.a("village/plains/houses/plains_butcher_shop_1", $$6), 2),
-               new Pair[]{
-                  Pair.of(dwr.a("village/plains/houses/plains_butcher_shop_2", $$6), 2),
-                  Pair.of(dwr.a("village/plains/houses/plains_tool_smith_1", $$6), 2),
-                  Pair.of(dwr.a("village/plains/houses/plains_fletcher_house_1", $$6), 2),
-                  Pair.of(dwr.a("village/plains/houses/plains_shepherds_house_1"), 2),
-                  Pair.of(dwr.a("village/plains/houses/plains_armorer_house_1", $$6), 2),
-                  Pair.of(dwr.a("village/plains/houses/plains_fisher_cottage_1", $$6), 2),
-                  Pair.of(dwr.a("village/plains/houses/plains_tannery_1", $$6), 2),
-                  Pair.of(dwr.a("village/plains/houses/plains_cartographer_1", $$6), 1),
-                  Pair.of(dwr.a("village/plains/houses/plains_library_1", $$6), 5),
-                  Pair.of(dwr.a("village/plains/houses/plains_library_2", $$6), 1),
-                  Pair.of(dwr.a("village/plains/houses/plains_masons_house_1", $$6), 2),
-                  Pair.of(dwr.a("village/plains/houses/plains_weaponsmith_1", $$6), 2),
-                  Pair.of(dwr.a("village/plains/houses/plains_temple_3", $$6), 2),
-                  Pair.of(dwr.a("village/plains/houses/plains_temple_4", $$6), 2),
-                  Pair.of(dwr.a("village/plains/houses/plains_stable_1", $$6), 2),
-                  Pair.of(dwr.a("village/plains/houses/plains_stable_2"), 2),
-                  Pair.of(dwr.a("village/plains/houses/plains_large_farm_1", $$11), 4),
-                  Pair.of(dwr.a("village/plains/houses/plains_small_farm_1", $$11), 4),
-                  Pair.of(dwr.a("village/plains/houses/plains_animal_pen_1"), 1),
-                  Pair.of(dwr.a("village/plains/houses/plains_animal_pen_2"), 1),
-                  Pair.of(dwr.a("village/plains/houses/plains_animal_pen_3"), 5),
-                  Pair.of(dwr.a("village/plains/houses/plains_accessory_1"), 1),
-                  Pair.of(dwr.a("village/plains/houses/plains_meeting_point_4", $$8), 3),
-                  Pair.of(dwr.a("village/plains/houses/plains_meeting_point_5"), 1),
-                  Pair.of(dwr.g(), 10)
-               }
-            ),
-            dwt.a.b
-         )
-      );
-      oa.a(
-         $$0,
-         "village/plains/zombie/houses",
-         new dwt(
-            $$14,
-            ImmutableList.of(
-               Pair.of(dwr.a("village/plains/zombie/houses/plains_small_house_1", $$9), 2),
-               Pair.of(dwr.a("village/plains/zombie/houses/plains_small_house_2", $$9), 2),
-               Pair.of(dwr.a("village/plains/zombie/houses/plains_small_house_3", $$9), 2),
-               Pair.of(dwr.a("village/plains/zombie/houses/plains_small_house_4", $$9), 2),
-               Pair.of(dwr.a("village/plains/zombie/houses/plains_small_house_5", $$9), 2),
-               Pair.of(dwr.a("village/plains/zombie/houses/plains_small_house_6", $$9), 1),
-               Pair.of(dwr.a("village/plains/zombie/houses/plains_small_house_7", $$9), 2),
-               Pair.of(dwr.a("village/plains/zombie/houses/plains_small_house_8", $$9), 2),
-               Pair.of(dwr.a("village/plains/zombie/houses/plains_medium_house_1", $$9), 2),
-               Pair.of(dwr.a("village/plains/zombie/houses/plains_medium_house_2", $$9), 2),
-               Pair.of(dwr.a("village/plains/zombie/houses/plains_big_house_1", $$9), 2),
-               Pair.of(dwr.a("village/plains/houses/plains_butcher_shop_1", $$9), 2),
-               new Pair[]{
-                  Pair.of(dwr.a("village/plains/zombie/houses/plains_butcher_shop_2", $$9), 2),
-                  Pair.of(dwr.a("village/plains/houses/plains_tool_smith_1", $$9), 2),
-                  Pair.of(dwr.a("village/plains/zombie/houses/plains_fletcher_house_1", $$9), 2),
-                  Pair.of(dwr.a("village/plains/zombie/houses/plains_shepherds_house_1", $$9), 2),
-                  Pair.of(dwr.a("village/plains/houses/plains_armorer_house_1", $$9), 2),
-                  Pair.of(dwr.a("village/plains/houses/plains_fisher_cottage_1", $$9), 2),
-                  Pair.of(dwr.a("village/plains/houses/plains_tannery_1", $$9), 2),
-                  Pair.of(dwr.a("village/plains/houses/plains_cartographer_1", $$9), 1),
-                  Pair.of(dwr.a("village/plains/houses/plains_library_1", $$9), 3),
-                  Pair.of(dwr.a("village/plains/houses/plains_library_2", $$9), 1),
-                  Pair.of(dwr.a("village/plains/houses/plains_masons_house_1", $$9), 2),
-                  Pair.of(dwr.a("village/plains/houses/plains_weaponsmith_1", $$9), 2),
-                  Pair.of(dwr.a("village/plains/houses/plains_temple_3", $$9), 2),
-                  Pair.of(dwr.a("village/plains/houses/plains_temple_4", $$9), 2),
-                  Pair.of(dwr.a("village/plains/zombie/houses/plains_stable_1", $$9), 2),
-                  Pair.of(dwr.a("village/plains/houses/plains_stable_2", $$9), 2),
-                  Pair.of(dwr.a("village/plains/houses/plains_large_farm_1", $$9), 4),
-                  Pair.of(dwr.a("village/plains/houses/plains_small_farm_1", $$9), 4),
-                  Pair.of(dwr.a("village/plains/houses/plains_animal_pen_1", $$9), 1),
-                  Pair.of(dwr.a("village/plains/houses/plains_animal_pen_2", $$9), 1),
-                  Pair.of(dwr.a("village/plains/zombie/houses/plains_animal_pen_3", $$9), 5),
-                  Pair.of(dwr.a("village/plains/zombie/houses/plains_meeting_point_4", $$9), 3),
-                  Pair.of(dwr.a("village/plains/zombie/houses/plains_meeting_point_5", $$9), 1),
-                  Pair.of(dwr.g(), 10)
-               }
-            ),
-            dwt.a.b
-         )
-      );
-      $$0.a(
          b,
-         new dwt(
-            $$13,
-            ImmutableList.of(
-               Pair.of(dwr.a("village/plains/terminators/terminator_01", $$10), 1),
-               Pair.of(dwr.a("village/plains/terminators/terminator_02", $$10), 1),
-               Pair.of(dwr.a("village/plains/terminators/terminator_03", $$10), 1),
-               Pair.of(dwr.a("village/plains/terminators/terminator_04", $$10), 1)
+         ImmutableList.of(
+            new dyu(
+               ImmutableList.of(
+                  new dyq(new dzd(aps.p), dxz.b, csw.a.n()),
+                  new dyq(new dye(csw.cp), dxz.b, csw.a.n()),
+                  new dyq(new dye(csw.cq), dxz.b, csw.a.n()),
+                  new dyq(new dys(csw.r, 0.2F), dxz.b, csw.bs.n()),
+                  new dyq(new dys(csw.hP, 0.2F), dxz.b, csw.bs.n()),
+                  new dyq(new dys(csw.Y, 0.05F), dxz.b, csw.bs.n()),
+                  new dyq(new dys(csw.as, 0.05F), dxz.b, csw.bs.n()),
+                  new dyq(new dys(csw.hk, 0.05F), dxz.b, csw.bs.n()),
+                  new dyq(new dys(csw.hn, 0.05F), dxz.b, csw.bs.n()),
+                  new dyq(new dys(csw.hx, 0.05F), dxz.b, csw.bs.n()),
+                  new dyq(new dys(csw.eZ, 0.5F), dxz.b, csw.bs.n()),
+                  new dyq(
+                     new dyg(csw.eZ.n().a(cwt.a, Boolean.valueOf(true)).a(cwt.c, Boolean.valueOf(true))),
+                     dxz.b,
+                     csw.hL.n().a(cwt.a, Boolean.valueOf(true)).a(cwt.c, Boolean.valueOf(true))
+                  ),
+                  new dyq[]{
+                     new dyq(
+                        new dyg(csw.eZ.n().a(cwt.b, Boolean.valueOf(true)).a(cwt.d, Boolean.valueOf(true))),
+                        dxz.b,
+                        csw.hL.n().a(cwt.b, Boolean.valueOf(true)).a(cwt.d, Boolean.valueOf(true))
+                     ),
+                     new dyq(new dys(csw.cB, 0.1F), dxz.b, csw.fe.n())
+                  }
+               )
+            )
+         )
+      );
+      a(
+         $$0,
+         c,
+         ImmutableList.of(
+            new dyu(
+               ImmutableList.of(
+                  new dyq(new dzd(aps.p), dxz.b, csw.a.n()),
+                  new dyq(new dye(csw.cp), dxz.b, csw.a.n()),
+                  new dyq(new dye(csw.cq), dxz.b, csw.a.n()),
+                  new dyq(new dye(csw.oe), dxz.b, csw.a.n()),
+                  new dyq(new dys(csw.o, 0.2F), dxz.b, csw.bs.n()),
+                  new dyq(new dys(csw.ju, 0.4F), dxz.b, csw.bs.n()),
+                  new dyq(new dys(csw.af, 0.05F), dxz.b, csw.bs.n()),
+                  new dyq(new dys(csw.ax, 0.05F), dxz.b, csw.bs.n()),
+                  new dyq(new dys(csw.eZ, 0.5F), dxz.b, csw.bs.n()),
+                  new dyq(
+                     new dyg(csw.eZ.n().a(cwt.a, Boolean.valueOf(true)).a(cwt.c, Boolean.valueOf(true))),
+                     dxz.b,
+                     csw.hL.n().a(cwt.a, Boolean.valueOf(true)).a(cwt.c, Boolean.valueOf(true))
+                  ),
+                  new dyq(
+                     new dyg(csw.eZ.n().a(cwt.b, Boolean.valueOf(true)).a(cwt.d, Boolean.valueOf(true))),
+                     dxz.b,
+                     csw.hL.n().a(cwt.b, Boolean.valueOf(true)).a(cwt.d, Boolean.valueOf(true))
+                  ),
+                  new dyq(new dys(csw.cB, 0.1F), dxz.b, csw.gt.n()),
+                  new dyq[]{new dyq(new dys(csw.cB, 0.8F), dxz.b, csw.gu.n())}
+               )
+            )
+         )
+      );
+      a(
+         $$0,
+         d,
+         ImmutableList.of(
+            new dyu(
+               ImmutableList.of(
+                  new dyq(new dys(csw.m, 0.8F), dxz.b, csw.cn.n()),
+                  new dyq(new dzd(aps.p), dxz.b, csw.a.n()),
+                  new dyq(new dye(csw.cp), dxz.b, csw.a.n()),
+                  new dyq(new dye(csw.cq), dxz.b, csw.a.n()),
+                  new dyq(new dye(csw.og), dxz.b, csw.og.n().a(cti.b, Boolean.valueOf(false))),
+                  new dyq(new dys(csw.m, 0.08F), dxz.b, csw.bs.n()),
+                  new dyq(new dys(csw.V, 0.08F), dxz.b, csw.bs.n()),
+                  new dyq(new dys(csw.eZ, 0.5F), dxz.b, csw.bs.n()),
+                  new dyq(
+                     new dyg(csw.eZ.n().a(cwt.a, Boolean.valueOf(true)).a(cwt.c, Boolean.valueOf(true))),
+                     dxz.b,
+                     csw.hL.n().a(cwt.a, Boolean.valueOf(true)).a(cwt.c, Boolean.valueOf(true))
+                  ),
+                  new dyq(
+                     new dyg(csw.eZ.n().a(cwt.b, Boolean.valueOf(true)).a(cwt.d, Boolean.valueOf(true))),
+                     dxz.b,
+                     csw.hL.n().a(cwt.b, Boolean.valueOf(true)).a(cwt.d, Boolean.valueOf(true))
+                  ),
+                  new dyq(new dys(csw.cB, 0.3F), dxz.b, csw.fd.n()),
+                  new dyq(new dys(csw.cB, 0.2F), dxz.b, csw.gu.n()),
+                  new dyq[0]
+               )
+            )
+         )
+      );
+      a(
+         $$0,
+         e,
+         ImmutableList.of(
+            new dyu(
+               ImmutableList.of(
+                  new dyq(new dzd(aps.p), dxz.b, csw.a.n()),
+                  new dyq(new dye(csw.cp), dxz.b, csw.a.n()),
+                  new dyq(new dye(csw.cq), dxz.b, csw.a.n()),
+                  new dyq(new dys(csw.jS, 0.08F), dxz.b, csw.bs.n()),
+                  new dyq(new dys(csw.aX, 0.1F), dxz.b, csw.bs.n()),
+                  new dyq(new dys(csw.iA, 0.08F), dxz.b, csw.bs.n()),
+                  new dyq(new dys(csw.nl, 0.08F), dxz.b, csw.bs.n()),
+                  new dyq(new dys(csw.ny, 0.08F), dxz.b, csw.bs.n()),
+                  new dyq(new dys(csw.cB, 0.2F), dxz.b, csw.kD.n()),
+                  new dyq(new dys(csw.cB, 0.1F), dxz.b, csw.fe.n())
+               )
+            )
+         )
+      );
+      a($$0, f, ImmutableList.of(new dyu(ImmutableList.of(new dyq(new dys(csw.m, 0.1F), dxz.b, csw.cn.n())))));
+      a($$0, g, ImmutableList.of(new dyu(ImmutableList.of(new dyq(new dys(csw.m, 0.2F), dxz.b, csw.cn.n())))));
+      a($$0, h, ImmutableList.of(new dyu(ImmutableList.of(new dyq(new dys(csw.m, 0.7F), dxz.b, csw.cn.n())))));
+      a(
+         $$0,
+         i,
+         ImmutableList.of(
+            new dyu(
+               ImmutableList.of(
+                  new dyq(new dye(csw.kE), new dye(csw.G), csw.n.n()),
+                  new dyq(new dys(csw.kE, 0.1F), dxz.b, csw.i.n()),
+                  new dyq(new dye(csw.i), new dye(csw.G), csw.G.n()),
+                  new dyq(new dye(csw.j), new dye(csw.G), csw.G.n())
+               )
+            )
+         )
+      );
+      a(
+         $$0,
+         j,
+         ImmutableList.of(
+            new dyu(
+               ImmutableList.of(
+                  new dyq(new dye(csw.kE), new dye(csw.G), csw.r.n()),
+                  new dyq(new dys(csw.kE, 0.2F), dxz.b, csw.i.n()),
+                  new dyq(new dye(csw.i), new dye(csw.G), csw.G.n()),
+                  new dyq(new dye(csw.j), new dye(csw.G), csw.G.n())
+               )
+            )
+         )
+      );
+      a(
+         $$0,
+         k,
+         ImmutableList.of(
+            new dyu(
+               ImmutableList.of(
+                  new dyq(new dye(csw.kE), new dye(csw.G), csw.o.n()),
+                  new dyq(new dye(csw.kE), new dye(csw.dO), csw.o.n()),
+                  new dyq(new dys(csw.kE, 0.2F), dxz.b, csw.i.n()),
+                  new dyq(new dye(csw.i), new dye(csw.G), csw.G.n()),
+                  new dyq(new dye(csw.j), new dye(csw.G), csw.G.n())
+               )
+            )
+         )
+      );
+      a(
+         $$0,
+         l,
+         ImmutableList.of(
+            new dyu(
+               ImmutableList.of(
+                  new dyq(new dys(csw.cB, 0.3F), dxz.b, csw.gt.n()),
+                  new dyq(new dys(csw.cB, 0.2F), dxz.b, csw.gu.n()),
+                  new dyq(new dys(csw.cB, 0.1F), dxz.b, csw.kD.n())
+               )
+            )
+         )
+      );
+      a($$0, m, ImmutableList.of(new dyu(ImmutableList.of(new dyq(new dys(csw.cB, 0.1F), dxz.b, csw.fe.n())))));
+      a(
+         $$0,
+         n,
+         ImmutableList.of(new dyu(ImmutableList.of(new dyq(new dys(csw.cB, 0.1F), dxz.b, csw.gt.n()), new dyq(new dys(csw.cB, 0.8F), dxz.b, csw.gu.n()))))
+      );
+      a(
+         $$0,
+         o,
+         ImmutableList.of(new dyu(ImmutableList.of(new dyq(new dys(csw.cB, 0.3F), dxz.b, csw.fd.n()), new dyq(new dys(csw.cB, 0.2F), dxz.b, csw.gu.n()))))
+      );
+      a(
+         $$0,
+         p,
+         ImmutableList.of(new dyu(ImmutableList.of(new dyq(new dys(csw.cB, 0.2F), dxz.b, csw.kD.n()), new dyq(new dys(csw.cB, 0.1F), dxz.b, csw.fe.n()))))
+      );
+      a($$0, q, ImmutableList.of(new dyf(0.05F)));
+      a(
+         $$0,
+         r,
+         ImmutableList.of(
+            new dyu(ImmutableList.of(new dyq(new dys(csw.kJ, 0.75F), dxz.b, csw.px.n()), new dyq(new dys(csw.px, 0.15F), dxz.b, csw.pw.n()), $$3, $$2))
+         )
+      );
+      a(
+         $$0,
+         s,
+         ImmutableList.of(
+            new dyu(ImmutableList.of(new dyq(new dys(csw.pw, 0.35F), dxz.b, csw.px.n()), new dyq(new dys(csw.py, 0.1F), dxz.b, csw.px.n()), $$3, $$2))
+         )
+      );
+      a(
+         $$0,
+         t,
+         ImmutableList.of(
+            new dyu(ImmutableList.of(new dyq(new dys(csw.pw, 0.3F), dxz.b, csw.px.n()), new dyq(new dys(csw.pr, 1.0E-4F), dxz.b, csw.a.n()), $$3, $$2))
+         )
+      );
+      a(
+         $$0,
+         u,
+         ImmutableList.of(
+            new dyu(ImmutableList.of(new dyq(new dys(csw.py, 0.5F), dxz.b, csw.a.n()), new dyq(new dys(csw.ch, 0.1F), dxz.b, csw.px.n()), $$3, $$2))
+         )
+      );
+      a(
+         $$0,
+         v,
+         ImmutableList.of(
+            new dyu(ImmutableList.of(new dyq(new dys(csw.pw, 0.1F), dxz.b, csw.px.n()), new dyq(new dys(csw.pr, 1.0E-4F), dxz.b, csw.a.n()), $$3, $$2))
+         )
+      );
+      a(
+         $$0,
+         w,
+         ImmutableList.of(
+            new dyu(
+               ImmutableList.of(
+                  new dyq(new dys(csw.pw, 0.3F), dxz.b, csw.px.n()),
+                  new dyq(new dys(csw.pr, 1.0E-4F), dxz.b, csw.a.n()),
+                  new dyq(new dys(csw.ch, 0.3F), dxz.b, csw.px.n()),
+                  $$3,
+                  $$2
+               )
+            )
+         )
+      );
+      a(
+         $$0,
+         x,
+         ImmutableList.of(
+            new dyu(
+               ImmutableList.of(
+                  new dyq(new dys(csw.pw, 0.4F), dxz.b, csw.px.n()),
+                  new dyq(new dys(csw.pr, 0.01F), dxz.b, csw.px.n()),
+                  new dyq(new dys(csw.pw, 1.0E-4F), dxz.b, csw.a.n()),
+                  new dyq(new dys(csw.pr, 1.0E-4F), dxz.b, csw.a.n()),
+                  new dyq(new dys(csw.ch, 0.3F), dxz.b, csw.px.n()),
+                  $$3,
+                  $$2
+               )
+            )
+         )
+      );
+      a(
+         $$0,
+         y,
+         ImmutableList.of(
+            new dyu(ImmutableList.of(new dyq(new dys(csw.py, 0.5F), dxz.b, csw.a.n()), new dyq(new dys(csw.ch, 0.6F), dxz.b, csw.px.n()), $$3, $$2))
+         )
+      );
+      a(
+         $$0,
+         z,
+         ImmutableList.of(new dyu(ImmutableList.of(new dyq(new dys(csw.pw, 0.3F), dxz.b, csw.px.n()), new dyq(new dys(csw.pr, 1.0E-4F), dxz.b, csw.a.n()))))
+      );
+      a(
+         $$0,
+         A,
+         ImmutableList.of(
+            new dyu(
+               ImmutableList.of(
+                  new dyq(new dys(csw.pw, 0.3F), dxz.b, csw.px.n()),
+                  new dyq(new dys(csw.pw, 0.15F), dxz.b, csw.a.n()),
+                  new dyq(new dys(csw.pw, 0.3F), dxz.b, csw.pr.n())
+               )
+            )
+         )
+      );
+      a(
+         $$0,
+         B,
+         ImmutableList.of(
+            new dyu(
+               ImmutableList.of(
+                  new dyq(new dys(csw.pw, 0.01F), dxz.b, csw.a.n()),
+                  new dyq(new dys(csw.pw, 0.5F), dxz.b, csw.px.n()),
+                  new dyq(new dys(csw.pw, 0.3F), dxz.b, csw.pr.n()),
+                  $$3
+               )
+            )
+         )
+      );
+      a(
+         $$0,
+         C,
+         ImmutableList.of(
+            new dyu(
+               ImmutableList.of(new dyq(new dys(csw.ch, 0.3F), dxz.b, csw.px.n()), new dyq(dxz.b, dxz.b, new dya(0.0F, 0.05F, 0, 100, ha.a.b), csw.a.n()), $$3)
+            )
+         )
+      );
+      a($$0, D, ImmutableList.of(new dyf(0.9F), new dyr(aps.bH)));
+      a($$0, E, ImmutableList.of(new dyf(0.1F), new dyr(aps.bH)));
+      a($$0, F, ImmutableList.of(new dyf(0.1F), new dyu(ImmutableList.of(new dyq(new dye(csw.R), dxz.b, csw.cy.n()))), new dyr(aps.bH)));
+      a(
+         $$0,
+         G,
+         ImmutableList.of(
+            new dyu(
+               ImmutableList.of(
+                  new dyq(new dys(csw.rV, 0.3F), dxz.b, csw.sa.n()),
+                  new dyq(new dys(csw.rR, 0.3F), dxz.b, csw.sb.n()),
+                  new dyq(new dys(csw.of, 0.05F), dxz.b, csw.a.n())
+               )
             ),
-            dwt.a.a
+            new dyr(aps.bH)
          )
       );
-      oa.a($$0, "village/plains/trees", new dwt($$13, ImmutableList.of(Pair.of(dwr.a($$2), 1)), dwt.a.b));
-      oa.a(
+      a(
          $$0,
-         "village/plains/decor",
-         new dwt(
-            $$13,
-            ImmutableList.of(
-               Pair.of(dwr.a("village/plains/plains_lamp_1"), 2), Pair.of(dwr.a($$2), 1), Pair.of(dwr.a($$3), 1), Pair.of(dwr.a($$4), 1), Pair.of(dwr.g(), 2)
+         H,
+         ImmutableList.of(
+            new dyf($$1.b(aps.bN), 0.95F),
+            new dyu(
+               ImmutableList.of(
+                  new dyq(new dys(csw.rV, 0.3F), dxz.b, csw.sa.n()),
+                  new dyq(new dys(csw.rR, 0.3F), dxz.b, csw.sb.n()),
+                  new dyq(new dys(csw.of, 0.05F), dxz.b, csw.a.n())
+               )
             ),
-            dwt.a.b
+            new dyr(aps.bH)
          )
       );
-      oa.a(
+      a(
          $$0,
-         "village/plains/zombie/decor",
-         new dwt(
-            $$13,
-            ImmutableList.of(
-               Pair.of(dwr.a("village/plains/plains_lamp_1", $$9), 1),
-               Pair.of(dwr.a($$2), 1),
-               Pair.of(dwr.a($$3), 1),
-               Pair.of(dwr.a($$4), 1),
-               Pair.of(dwr.g(), 2)
+         I,
+         ImmutableList.of(
+            new dyf($$1.b(aps.bN), 0.95F),
+            new dyu(
+               ImmutableList.of(
+                  new dyq(new dys(csw.rV, 0.3F), dxz.b, csw.sa.n()),
+                  new dyq(new dys(csw.rR, 0.3F), dxz.b, csw.sb.n()),
+                  new dyq(new dys(csw.rT, 0.3F), dxz.b, csw.a.n()),
+                  new dyq(new dys(csw.of, 0.05F), dxz.b, csw.a.n())
+               )
             ),
-            dwt.a.b
+            new dyr(aps.bH)
          )
       );
-      oa.a(
+      a(
          $$0,
-         "village/plains/villagers",
-         new dwt(
-            $$13,
-            ImmutableList.of(
-               Pair.of(dwr.a("village/plains/villagers/nitwit"), 1),
-               Pair.of(dwr.a("village/plains/villagers/baby"), 1),
-               Pair.of(dwr.a("village/plains/villagers/unemployed"), 10)
+         J,
+         List.of(
+            new dyu(
+               List.of(
+                  new dyq(new dys(csw.L, 0.2F), dxz.b, csw.j.n()),
+                  new dyq(new dys(csw.L, 0.1F), dxz.b, csw.k.n()),
+                  new dyq(new dys(csw.eN, 0.1F), dxz.b, csw.eM.n())
+               )
             ),
-            dwt.a.b
+            a(eco.aE, 6),
+            a(eco.aF, 3)
          )
       );
-      oa.a(
+      a(
          $$0,
-         "village/plains/zombie/villagers",
-         new dwt(
-            $$13,
-            ImmutableList.of(Pair.of(dwr.a("village/plains/zombie/villagers/nitwit"), 1), Pair.of(dwr.a("village/plains/zombie/villagers/unemployed"), 10)),
-            dwt.a.b
-         )
-      );
-      oa.a(
-         $$0,
-         "village/common/animals",
-         new dwt(
-            $$13,
-            ImmutableList.of(
-               Pair.of(dwr.a("village/common/animals/cows_1"), 7),
-               Pair.of(dwr.a("village/common/animals/pigs_1"), 7),
-               Pair.of(dwr.a("village/common/animals/horses_1"), 1),
-               Pair.of(dwr.a("village/common/animals/horses_2"), 1),
-               Pair.of(dwr.a("village/common/animals/horses_3"), 1),
-               Pair.of(dwr.a("village/common/animals/horses_4"), 1),
-               Pair.of(dwr.a("village/common/animals/horses_5"), 1),
-               Pair.of(dwr.a("village/common/animals/sheep_1"), 1),
-               Pair.of(dwr.a("village/common/animals/sheep_2"), 1),
-               Pair.of(dwr.g(), 5)
+         K,
+         List.of(
+            new dyu(
+               List.of(
+                  new dyq(new dys(csw.L, 0.2F), dxz.b, csw.j.n()),
+                  new dyq(new dys(csw.L, 0.1F), dxz.b, csw.k.n()),
+                  new dyq(new dys(csw.eN, 0.1F), dxz.b, csw.eM.n())
+               )
             ),
-            dwt.a.b
+            a(eco.aE, 2)
          )
       );
-      oa.a(
-         $$0,
-         "village/common/sheep",
-         new dwt($$13, ImmutableList.of(Pair.of(dwr.a("village/common/animals/sheep_1"), 1), Pair.of(dwr.a("village/common/animals/sheep_2"), 1)), dwt.a.b)
-      );
-      oa.a(
-         $$0,
-         "village/common/cats",
-         new dwt(
-            $$13,
-            ImmutableList.of(
-               Pair.of(dwr.a("village/common/animals/cat_black"), 1),
-               Pair.of(dwr.a("village/common/animals/cat_british"), 1),
-               Pair.of(dwr.a("village/common/animals/cat_calico"), 1),
-               Pair.of(dwr.a("village/common/animals/cat_persian"), 1),
-               Pair.of(dwr.a("village/common/animals/cat_ragdoll"), 1),
-               Pair.of(dwr.a("village/common/animals/cat_red"), 1),
-               Pair.of(dwr.a("village/common/animals/cat_siamese"), 1),
-               Pair.of(dwr.a("village/common/animals/cat_tabby"), 1),
-               Pair.of(dwr.a("village/common/animals/cat_white"), 1),
-               Pair.of(dwr.a("village/common/animals/cat_jellie"), 1),
-               Pair.of(dwr.g(), 3)
-            ),
-            dwt.a.b
-         )
-      );
-      oa.a(
-         $$0,
-         "village/common/butcher_animals",
-         new dwt(
-            $$13,
-            ImmutableList.of(
-               Pair.of(dwr.a("village/common/animals/cows_1"), 3),
-               Pair.of(dwr.a("village/common/animals/pigs_1"), 3),
-               Pair.of(dwr.a("village/common/animals/sheep_1"), 1),
-               Pair.of(dwr.a("village/common/animals/sheep_2"), 1)
-            ),
-            dwt.a.b
-         )
-      );
-      oa.a($$0, "village/common/iron_golem", new dwt($$13, ImmutableList.of(Pair.of(dwr.a("village/common/iron_golem"), 1)), dwt.a.b));
-      oa.a($$0, "village/common/well_bottoms", new dwt($$13, ImmutableList.of(Pair.of(dwr.a("village/common/well_bottom"), 1)), dwt.a.b));
+      a($$0, L, List.of(a(eco.aE, 2)));
+   }
+
+   private static dyh a(aew $$0, int $$1) {
+      return new dyh(new dyu(List.of(new dyq(new dzd(aps.cl), dxz.b, dyn.b, csw.M.n(), new dzf($$0)))), bga.a($$1));
    }
 }
