@@ -1,271 +1,47 @@
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
+import java.util.List;
+import java.util.Optional;
 
-public class oc {
-   public static final aex<dwt> a = oa.a("village/savanna/town_centers");
-   private static final aex<dwt> b = oa.a("village/savanna/terminators");
-   private static final aex<dwt> c = oa.a("village/savanna/zombie/terminators");
-
-   public static void a(nt<dwt> $$0) {
-      hh<duo> $$1 = $$0.a(je.ay);
-      hg<duo> $$2 = $$1.b(pl.g);
-      hg<duo> $$3 = $$1.b(pl.a);
-      hg<duo> $$4 = $$1.b(pl.b);
-      hh<dzb> $$5 = $$0.a(je.aA);
-      hg<dzb> $$6 = $$5.b(ob.b);
-      hg<dzb> $$7 = $$5.b(ob.j);
-      hg<dzb> $$8 = $$5.b(ob.m);
-      hh<dwt> $$9 = $$0.a(je.aC);
-      hg<dwt> $$10 = $$9.b(oa.a);
-      hg<dwt> $$11 = $$9.b(b);
-      hg<dwt> $$12 = $$9.b(c);
+public interface oc {
+   static void a(nr<dvo> $$0) {
+      hf<dvi> $$1 = $$0.a(jc.az);
+      hf<cqt> $$2 = $$0.a(jc.ap);
+      he.c<dvo> $$3 = $$0.a(
+         dvb.a,
+         new dvo(
+            List.of(dvo.a($$1.b(dvc.t)), dvo.a($$1.b(dvc.u)), dvo.a($$1.b(dvc.v)), dvo.a($$1.b(dvc.w)), dvo.a($$1.b(dvc.x))), new dwd(34, 8, dwe.a, 10387312)
+         )
+      );
+      $$0.a(dvb.b, new dvo($$1.b(dvc.f), new dwd(32, 8, dwe.a, 14357617)));
+      $$0.a(dvb.c, new dvo($$1.b(dvc.g), new dwd(32, 8, dwe.a, 14357618)));
+      $$0.a(dvb.d, new dvo($$1.b(dvc.e), new dwd(32, 8, dwe.a, 14357619)));
+      $$0.a(dvb.e, new dvo($$1.b(dvc.j), new dwd(32, 8, dwe.a, 14357620)));
+      $$0.a(dvb.f, new dvo($$1.b(dvc.a), new dwd(hy.g, dwf.c.b, 0.2F, 165745296, Optional.of(new dwf.a($$3, 10)), 32, 8, dwe.a)));
+      $$0.a(dvb.q, new dvo($$1.b(dvc.F), new dwd(24, 8, dwe.a, 20083232)));
+      $$0.a(dvb.g, new dvo($$1.b(dvc.l), new dwd(32, 5, dwe.b, 10387313)));
+      $$0.a(dvb.h, new dvo($$1.b(dvc.d), new dwd(80, 20, dwe.b, 10387319)));
+      $$0.a(dvb.i, new dvo($$1.b(dvc.r), new dwd(new hy(9, 0, 9), dwf.c.c, 0.01F, 0, Optional.empty(), 1, 0, dwe.a)));
+      $$0.a(dvb.j, new dvo(List.of(dvo.a($$1.b(dvc.b)), dvo.a($$1.b(dvc.c))), new dwd(hy.g, dwf.c.d, 0.004F, 0, Optional.empty(), 1, 0, dwe.a)));
       $$0.a(
-         a,
-         new dwt(
-            $$10,
-            ImmutableList.of(
-               Pair.of(dwr.a("village/savanna/town_centers/savanna_meeting_point_1"), 100),
-               Pair.of(dwr.a("village/savanna/town_centers/savanna_meeting_point_2"), 50),
-               Pair.of(dwr.a("village/savanna/town_centers/savanna_meeting_point_3"), 150),
-               Pair.of(dwr.a("village/savanna/town_centers/savanna_meeting_point_4"), 150),
-               Pair.of(dwr.a("village/savanna/zombie/town_centers/savanna_meeting_point_1", $$6), 2),
-               Pair.of(dwr.a("village/savanna/zombie/town_centers/savanna_meeting_point_2", $$6), 1),
-               Pair.of(dwr.a("village/savanna/zombie/town_centers/savanna_meeting_point_3", $$6), 3),
-               Pair.of(dwr.a("village/savanna/zombie/town_centers/savanna_meeting_point_4", $$6), 3)
+         dvb.k,
+         new dvo(
+            List.of(
+               dvo.a($$1.b(dvc.y)),
+               dvo.a($$1.b(dvc.z)),
+               dvo.a($$1.b(dvc.A)),
+               dvo.a($$1.b(dvc.B)),
+               dvo.a($$1.b(dvc.C)),
+               dvo.a($$1.b(dvc.D)),
+               dvo.a($$1.b(dvc.E))
             ),
-            dwt.a.b
+            new dwd(40, 15, dwe.a, 34222645)
          )
       );
-      oa.a(
-         $$0,
-         "village/savanna/streets",
-         new dwt(
-            $$11,
-            ImmutableList.of(
-               Pair.of(dwr.a("village/savanna/streets/corner_01", $$7), 2),
-               Pair.of(dwr.a("village/savanna/streets/corner_03", $$7), 2),
-               Pair.of(dwr.a("village/savanna/streets/straight_02", $$7), 4),
-               Pair.of(dwr.a("village/savanna/streets/straight_04", $$7), 7),
-               Pair.of(dwr.a("village/savanna/streets/straight_05", $$7), 3),
-               Pair.of(dwr.a("village/savanna/streets/straight_06", $$7), 4),
-               Pair.of(dwr.a("village/savanna/streets/straight_08", $$7), 4),
-               Pair.of(dwr.a("village/savanna/streets/straight_09", $$7), 4),
-               Pair.of(dwr.a("village/savanna/streets/straight_10", $$7), 4),
-               Pair.of(dwr.a("village/savanna/streets/straight_11", $$7), 4),
-               Pair.of(dwr.a("village/savanna/streets/crossroad_02", $$7), 1),
-               Pair.of(dwr.a("village/savanna/streets/crossroad_03", $$7), 2),
-               new Pair[]{
-                  Pair.of(dwr.a("village/savanna/streets/crossroad_04", $$7), 2),
-                  Pair.of(dwr.a("village/savanna/streets/crossroad_05", $$7), 2),
-                  Pair.of(dwr.a("village/savanna/streets/crossroad_06", $$7), 2),
-                  Pair.of(dwr.a("village/savanna/streets/crossroad_07", $$7), 2),
-                  Pair.of(dwr.a("village/savanna/streets/split_01", $$7), 2),
-                  Pair.of(dwr.a("village/savanna/streets/split_02", $$7), 2),
-                  Pair.of(dwr.a("village/savanna/streets/turn_01", $$7), 3)
-               }
-            ),
-            dwt.a.a
-         )
-      );
-      oa.a(
-         $$0,
-         "village/savanna/zombie/streets",
-         new dwt(
-            $$12,
-            ImmutableList.of(
-               Pair.of(dwr.a("village/savanna/zombie/streets/corner_01", $$7), 2),
-               Pair.of(dwr.a("village/savanna/zombie/streets/corner_03", $$7), 2),
-               Pair.of(dwr.a("village/savanna/zombie/streets/straight_02", $$7), 4),
-               Pair.of(dwr.a("village/savanna/zombie/streets/straight_04", $$7), 7),
-               Pair.of(dwr.a("village/savanna/zombie/streets/straight_05", $$7), 3),
-               Pair.of(dwr.a("village/savanna/zombie/streets/straight_06", $$7), 4),
-               Pair.of(dwr.a("village/savanna/zombie/streets/straight_08", $$7), 4),
-               Pair.of(dwr.a("village/savanna/zombie/streets/straight_09", $$7), 4),
-               Pair.of(dwr.a("village/savanna/zombie/streets/straight_10", $$7), 4),
-               Pair.of(dwr.a("village/savanna/zombie/streets/straight_11", $$7), 4),
-               Pair.of(dwr.a("village/savanna/zombie/streets/crossroad_02", $$7), 1),
-               Pair.of(dwr.a("village/savanna/zombie/streets/crossroad_03", $$7), 2),
-               new Pair[]{
-                  Pair.of(dwr.a("village/savanna/zombie/streets/crossroad_04", $$7), 2),
-                  Pair.of(dwr.a("village/savanna/zombie/streets/crossroad_05", $$7), 2),
-                  Pair.of(dwr.a("village/savanna/zombie/streets/crossroad_06", $$7), 2),
-                  Pair.of(dwr.a("village/savanna/zombie/streets/crossroad_07", $$7), 2),
-                  Pair.of(dwr.a("village/savanna/zombie/streets/split_01", $$7), 2),
-                  Pair.of(dwr.a("village/savanna/zombie/streets/split_02", $$7), 2),
-                  Pair.of(dwr.a("village/savanna/zombie/streets/turn_01", $$7), 3)
-               }
-            ),
-            dwt.a.a
-         )
-      );
-      oa.a(
-         $$0,
-         "village/savanna/houses",
-         new dwt(
-            $$11,
-            ImmutableList.of(
-               Pair.of(dwr.a("village/savanna/houses/savanna_small_house_1"), 2),
-               Pair.of(dwr.a("village/savanna/houses/savanna_small_house_2"), 2),
-               Pair.of(dwr.a("village/savanna/houses/savanna_small_house_3"), 2),
-               Pair.of(dwr.a("village/savanna/houses/savanna_small_house_4"), 2),
-               Pair.of(dwr.a("village/savanna/houses/savanna_small_house_5"), 2),
-               Pair.of(dwr.a("village/savanna/houses/savanna_small_house_6"), 2),
-               Pair.of(dwr.a("village/savanna/houses/savanna_small_house_7"), 2),
-               Pair.of(dwr.a("village/savanna/houses/savanna_small_house_8"), 2),
-               Pair.of(dwr.a("village/savanna/houses/savanna_medium_house_1"), 2),
-               Pair.of(dwr.a("village/savanna/houses/savanna_medium_house_2"), 2),
-               Pair.of(dwr.a("village/savanna/houses/savanna_butchers_shop_1"), 2),
-               Pair.of(dwr.a("village/savanna/houses/savanna_butchers_shop_2"), 2),
-               new Pair[]{
-                  Pair.of(dwr.a("village/savanna/houses/savanna_tool_smith_1"), 2),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_fletcher_house_1"), 2),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_shepherd_1"), 7),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_armorer_1"), 1),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_fisher_cottage_1"), 3),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_tannery_1"), 2),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_cartographer_1"), 2),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_library_1"), 2),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_mason_1"), 2),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_weaponsmith_1"), 2),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_weaponsmith_2"), 2),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_temple_1"), 2),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_temple_2"), 3),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_large_farm_1", $$8), 4),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_large_farm_2", $$8), 6),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_small_farm", $$8), 4),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_animal_pen_1"), 2),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_animal_pen_2"), 2),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_animal_pen_3"), 2),
-                  Pair.of(dwr.g(), 5)
-               }
-            ),
-            dwt.a.b
-         )
-      );
-      oa.a(
-         $$0,
-         "village/savanna/zombie/houses",
-         new dwt(
-            $$12,
-            ImmutableList.of(
-               Pair.of(dwr.a("village/savanna/zombie/houses/savanna_small_house_1", $$6), 2),
-               Pair.of(dwr.a("village/savanna/zombie/houses/savanna_small_house_2", $$6), 2),
-               Pair.of(dwr.a("village/savanna/zombie/houses/savanna_small_house_3", $$6), 2),
-               Pair.of(dwr.a("village/savanna/zombie/houses/savanna_small_house_4", $$6), 2),
-               Pair.of(dwr.a("village/savanna/zombie/houses/savanna_small_house_5", $$6), 2),
-               Pair.of(dwr.a("village/savanna/zombie/houses/savanna_small_house_6", $$6), 2),
-               Pair.of(dwr.a("village/savanna/zombie/houses/savanna_small_house_7", $$6), 2),
-               Pair.of(dwr.a("village/savanna/zombie/houses/savanna_small_house_8", $$6), 2),
-               Pair.of(dwr.a("village/savanna/zombie/houses/savanna_medium_house_1", $$6), 2),
-               Pair.of(dwr.a("village/savanna/zombie/houses/savanna_medium_house_2", $$6), 2),
-               Pair.of(dwr.a("village/savanna/houses/savanna_butchers_shop_1", $$6), 2),
-               Pair.of(dwr.a("village/savanna/houses/savanna_butchers_shop_2", $$6), 2),
-               new Pair[]{
-                  Pair.of(dwr.a("village/savanna/houses/savanna_tool_smith_1", $$6), 2),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_fletcher_house_1", $$6), 2),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_shepherd_1", $$6), 2),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_armorer_1", $$6), 1),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_fisher_cottage_1", $$6), 2),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_tannery_1", $$6), 2),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_cartographer_1", $$6), 2),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_library_1", $$6), 2),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_mason_1", $$6), 2),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_weaponsmith_1", $$6), 2),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_weaponsmith_2", $$6), 2),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_temple_1", $$6), 1),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_temple_2", $$6), 3),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_large_farm_1", $$6), 4),
-                  Pair.of(dwr.a("village/savanna/zombie/houses/savanna_large_farm_2", $$6), 4),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_small_farm", $$6), 4),
-                  Pair.of(dwr.a("village/savanna/houses/savanna_animal_pen_1", $$6), 2),
-                  Pair.of(dwr.a("village/savanna/zombie/houses/savanna_animal_pen_2", $$6), 2),
-                  Pair.of(dwr.a("village/savanna/zombie/houses/savanna_animal_pen_3", $$6), 2),
-                  Pair.of(dwr.g(), 5)
-               }
-            ),
-            dwt.a.b
-         )
-      );
-      $$0.a(
-         b,
-         new dwt(
-            $$10,
-            ImmutableList.of(
-               Pair.of(dwr.a("village/plains/terminators/terminator_01", $$7), 1),
-               Pair.of(dwr.a("village/plains/terminators/terminator_02", $$7), 1),
-               Pair.of(dwr.a("village/plains/terminators/terminator_03", $$7), 1),
-               Pair.of(dwr.a("village/plains/terminators/terminator_04", $$7), 1),
-               Pair.of(dwr.a("village/savanna/terminators/terminator_05", $$7), 1)
-            ),
-            dwt.a.a
-         )
-      );
-      $$0.a(
-         c,
-         new dwt(
-            $$10,
-            ImmutableList.of(
-               Pair.of(dwr.a("village/plains/terminators/terminator_01", $$7), 1),
-               Pair.of(dwr.a("village/plains/terminators/terminator_02", $$7), 1),
-               Pair.of(dwr.a("village/plains/terminators/terminator_03", $$7), 1),
-               Pair.of(dwr.a("village/plains/terminators/terminator_04", $$7), 1),
-               Pair.of(dwr.a("village/savanna/zombie/terminators/terminator_05", $$7), 1)
-            ),
-            dwt.a.a
-         )
-      );
-      oa.a($$0, "village/savanna/trees", new dwt($$10, ImmutableList.of(Pair.of(dwr.a($$2), 1)), dwt.a.b));
-      oa.a(
-         $$0,
-         "village/savanna/decor",
-         new dwt(
-            $$10,
-            ImmutableList.of(
-               Pair.of(dwr.a("village/savanna/savanna_lamp_post_01"), 4),
-               Pair.of(dwr.a($$2), 4),
-               Pair.of(dwr.a($$3), 4),
-               Pair.of(dwr.a($$4), 1),
-               Pair.of(dwr.g(), 4)
-            ),
-            dwt.a.b
-         )
-      );
-      oa.a(
-         $$0,
-         "village/savanna/zombie/decor",
-         new dwt(
-            $$10,
-            ImmutableList.of(
-               Pair.of(dwr.a("village/savanna/savanna_lamp_post_01", $$6), 4),
-               Pair.of(dwr.a($$2), 4),
-               Pair.of(dwr.a($$3), 4),
-               Pair.of(dwr.a($$4), 1),
-               Pair.of(dwr.g(), 4)
-            ),
-            dwt.a.b
-         )
-      );
-      oa.a(
-         $$0,
-         "village/savanna/villagers",
-         new dwt(
-            $$10,
-            ImmutableList.of(
-               Pair.of(dwr.a("village/savanna/villagers/nitwit"), 1),
-               Pair.of(dwr.a("village/savanna/villagers/baby"), 1),
-               Pair.of(dwr.a("village/savanna/villagers/unemployed"), 10)
-            ),
-            dwt.a.b
-         )
-      );
-      oa.a(
-         $$0,
-         "village/savanna/zombie/villagers",
-         new dwt(
-            $$10,
-            ImmutableList.of(Pair.of(dwr.a("village/savanna/zombie/villagers/nitwit"), 1), Pair.of(dwr.a("village/savanna/zombie/villagers/unemployed"), 10)),
-            dwt.a.b
-         )
-      );
+      $$0.a(dvb.l, new dvo(List.of(dvo.a($$1.b(dvc.h)), dvo.a($$1.b(dvc.i))), new dwd(24, 4, dwe.a, 165745295)));
+      $$0.a(dvb.m, new dvo(List.of(dvo.a($$1.b(dvc.m)), dvo.a($$1.b(dvc.n))), new dwd(20, 8, dwe.a, 14357621)));
+      $$0.a(dvb.n, new dvo(List.of(dvo.a($$1.b(dvc.o), 2), dvo.a($$1.b(dvc.s), 3)), new dwd(27, 4, dwe.a, 30084232)));
+      $$0.a(dvb.o, new dvo($$1.b(dvc.p), new dwd(2, 1, dwe.a, 14357921)));
+      $$0.a(dvb.p, new dvo($$1.b(dvc.q), new dwd(20, 11, dwe.b, 10387313)));
+      $$0.a(dvb.r, new dvo($$1.b(dvc.k), new dwc(32, 3, 128, $$2.b(apr.o))));
+      $$0.a(dvb.s, new dvo($$1.b(dvc.G), new dwd(34, 8, dwe.a, 83469867)));
    }
 }
