@@ -1,17 +1,55 @@
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 
 public class os {
-   public static final aex<dnl<?, ?>> a = ot.a("end_spike");
-   public static final aex<dnl<?, ?>> b = ot.a("end_gateway_return");
-   public static final aex<dnl<?, ?>> c = ot.a("end_gateway_delayed");
-   public static final aex<dnl<?, ?>> d = ot.a("chorus_plant");
-   public static final aex<dnl<?, ?>> e = ot.a("end_island");
+   public static final aev<dnj<?, ?>> a = or.a("ice_spike");
+   public static final aev<dnj<?, ?>> b = or.a("ice_patch");
+   public static final aev<dnj<?, ?>> c = or.a("forest_rock");
+   public static final aev<dnj<?, ?>> d = or.a("iceberg_packed");
+   public static final aev<dnj<?, ?>> e = or.a("iceberg_blue");
+   public static final aev<dnj<?, ?>> f = or.a("blue_ice");
+   public static final aev<dnj<?, ?>> g = or.a("lake_lava");
+   public static final aev<dnj<?, ?>> h = or.a("disk_clay");
+   public static final aev<dnj<?, ?>> i = or.a("disk_gravel");
+   public static final aev<dnj<?, ?>> j = or.a("disk_sand");
+   public static final aev<dnj<?, ?>> k = or.a("freeze_top_layer");
+   public static final aev<dnj<?, ?>> l = or.a("disk_grass");
+   public static final aev<dnj<?, ?>> m = or.a("bonus_chest");
+   public static final aev<dnj<?, ?>> n = or.a("void_start_platform");
+   public static final aev<dnj<?, ?>> o = or.a("desert_well");
+   public static final aev<dnj<?, ?>> p = or.a("spring_lava_overworld");
+   public static final aev<dnj<?, ?>> q = or.a("spring_lava_frozen");
+   public static final aev<dnj<?, ?>> r = or.a("spring_water");
 
-   public static void a(nt<dnl<?, ?>> $$0) {
-      ot.a($$0, a, dny.J, new dqw(false, ImmutableList.of(), null));
-      ot.a($$0, b, dny.L, dqb.a(aks.a, true));
-      ot.a($$0, c, dny.L, dqb.a());
-      ot.a($$0, d, dny.l);
-      ot.a($$0, e, dny.K);
+   public static void a(nr<dnj<?, ?>> $$0) {
+      or.a($$0, a, dnw.s);
+      or.a($$0, b, dnw.G, new dpx(dsj.a(csw.iC), dlz.c(List.of(csw.j, csw.i, csw.l, csw.k, csw.fl, csw.dP, csw.dO)), bgj.a(2, 3), 1));
+      or.a($$0, c, dnw.F, new dpt(csw.cn.n()));
+      or.a($$0, d, dnw.E, new dpt(csw.iC.n()));
+      or.a($$0, e, dnw.E, new dpt(csw.mW.n()));
+      or.a($$0, f, dnw.D);
+      or.a($$0, g, dnw.H, new dol.a(dsb.a(csw.H.n()), dsb.a(csw.b.n())));
+      or.a($$0, h, dnw.G, new dpx(dsj.a(csw.dR), dlz.c(List.of(csw.j, csw.dR)), bgj.a(2, 3), 1));
+      or.a($$0, i, dnw.G, new dpx(dsj.a(csw.L), dlz.c(List.of(csw.j, csw.i)), bgj.a(2, 5), 2));
+      or.a(
+         $$0, j, dnw.G, new dpx(new dsj(dsb.a(csw.I), List.of(new dsj.a(dlz.a(ha.a.q(), csw.a), dsb.a(csw.aV)))), dlz.c(List.of(csw.j, csw.i)), bgj.a(2, 6), 2)
+      );
+      or.a($$0, k, dnw.u);
+      or.a(
+         $$0,
+         l,
+         dnw.G,
+         new dpx(
+            new dsj(dsb.a(csw.j), List.of(new dsj.a(dlz.a(dlz.b(dlz.b(ha.b.q()), dlz.a(ha.b.q(), ean.c))), dsb.a(csw.i)))),
+            dlz.c(List.of(csw.j, csw.rH)),
+            bgj.a(2, 6),
+            2
+         )
+      );
+      or.a($$0, m, dnw.ac);
+      or.a($$0, n, dnw.n);
+      or.a($$0, o, dnw.o);
+      or.a($$0, p, dnw.k, new dqv(ean.e.g(), true, 4, 1, hi.a(csv::q, csw.b, csw.c, csw.e, csw.g, csw.rI, csw.qz, csw.qA, csw.j)));
+      or.a($$0, q, dnw.k, new dqv(ean.e.g(), true, 4, 1, hi.a(csv::q, csw.dP, csw.qC, csw.iC)));
+      or.a($$0, r, dnw.k, new dqv(ean.c.g(), true, 4, 1, hi.a(csv::q, csw.b, csw.c, csw.e, csw.g, csw.rI, csw.qz, csw.qA, csw.j, csw.dP, csw.qC, csw.iC)));
    }
 }
